--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc -p ./",
     "start": "node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "tsc": "tsc"
   },
   "repository": {
@@ -27,6 +27,12 @@
   },
   "homepage": "https://github.com/jrios-celerik/returned-notification-lambda-service#readme",
   "devDependencies": {
+    "aws-sdk-client-mock": "^2.0.0",
+    "jest": "^29.7.0",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.398.0",
+    "@aws-sdk/lib-dynamodb": "^3.699.0"
   }
 }
