Add sam build output to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # npm packages
 node_modules
 
-# builds
-.dist
+# local builds
+.dist/**
 
 # csv files
 # (I'm keeping AccessKey and SecretKey information in current repository for development purposes)
 # This is only to avoid tracking that file
 *.csv
+
+# sam builds
+.aws-sam/**
