--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Notification Service written in TypeScript with a serverless architecture within Lambda Functions in AWS",
   "main": "./source/index.ts",
   "scripts": {
-    "build": "tsc -p ./",
-    "start": "node ./dist/index.js",
+    "build": "npm run clean && sam build",
+    "clean": "rm -rf dist && rm -rf .aws-sam",
+    "start": "sam local start-api",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "tsc": "tsc"
   },
@@ -28,6 +29,7 @@
   "homepage": "https://github.com/jrios-celerik/returned-notification-lambda-service#readme",
   "devDependencies": {
     "aws-sdk-client-mock": "^2.0.0",
+    "esbuild": "^0.24.0",
     "jest": "^29.7.0",
     "typescript": "^5.7.2"
   },
