--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,11 @@
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
     "node_modules": true,
-    ".aws-sam": true
-  }
+    ".aws-sam": false,
+    "dist": false
+  },
+  "yaml.customTags": [
+    "!Sub",
+    "!Ref",
+  ]
 }
