--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "scripts": {
     "build": "npm run clean && sam build",
     "clean": "rm -rf dist && rm -rf .aws-sam",
+    "invoke:email": "sam local invoke --event events/email.json Notification",
+    "invoke:invalidEmail": "sam local invoke --event events/invalidEmail.json Notification",
+    "invoke:missingEmailProperty": "sam local invoke --event events/missingEmailProperty.json Notification",
+    "invoke:push": "sam local invoke --event events/push.json Notification",
+    "invoke:invalidPush": "sam local invoke --event events/invalidPush.json Notification",
+    "invoke:missingPushProperty": "sam local invoke --event events/missingPushProperty.json Notification",
+    "invoke:sms": "sam local invoke --event events/sms.json Notification",
+    "invoke:invalidSMS": "sam local invoke --event events/invalidSMS.json Notification",
+    "invoke:missingSMSProperty": "sam local invoke --event events/missingSMSProperty.json Notification",
     "start": "sam local start-api",
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "tsc": "tsc"
   },
   "repository": {
@@ -28,13 +36,13 @@
   },
   "homepage": "https://github.com/jrios-celerik/returned-notification-lambda-service#readme",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.146",
     "aws-sdk-client-mock": "^2.0.0",
     "esbuild": "^0.24.0",
     "jest": "^29.7.0",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.398.0",
-    "@aws-sdk/lib-dynamodb": "^3.699.0"
+    "aws-lambda": "^1.0.7"
   }
 }
