--- a/template.yaml
+++ b/template.yaml
@@ -19,7 +19,7 @@ Resources:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
   # This is a Lambda function config associated with the source code: get-all-items.js
-  helloFromLambda:
+  Notification:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: source/
@@ -37,8 +37,8 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /
-            Method: GET
+            Path: /notification
+            Method: POST
     Metadata:
       BuildMethod: esbuild
       BuildProperties:
